--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,8 +48,7 @@ jobs:
         env:
           # 저장소 이름에 맞게 base 경로 설정
           # 저장소 이름이 'catbench-leaderboard'인 경우: '/catbench-leaderboard/'
-          # 커스텀 도메인을 사용하는 경우: '/'
-          VITE_BASE_PATH: ${{ github.event.repository.name == github.event.repository.owner.login + '.github.io' && '/' || '/' + github.event.repository.name + '/' }}
+          VITE_BASE_PATH: '/catbench-leaderboard/'
         run: npm run build
 
       - name: Setup Pages
