--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "catbench-leaderboard",
   "version": "1.0.0",
   "type": "module",
-  "description": "CatBench Leaderboard - React 기반 MLIP 벤치마크 리더보드",
+  "description": "CatBench Leaderboard - React-based MLIP benchmarking leaderboard",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
